logs/Slang/generated/hdlconv/hdlconvertor_p123_2.sv.log
name: hdlconvertor_p123_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p123_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p123_2.sv:4:5: error: use of undeclared identifier '$isunbounded'
if ($isunbounded(max_cks)) begin
    ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p123_2.sv:7:37: error: expected expression
(reset_n && $rose(expr)) |-> (expr [* min_cks]);
                                    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p123_2.sv:14:36: error: expected expression
(reset_n && $rose(expr)) |-> (expr[* min_cks:max_cks])
                                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p123_2.sv:15:12: error: expected expression
##1 (!expr);
           ^
